# iis-finder

./: .coveragerc  README.md  codecov.yml  pyproject.toml
.github/workflows/: tests.yml
core/: base.py  model.py  solver_interface.py
solvers/: highs.py
tests/: __init__.py  conftest.py  test_base.py  test_file_io.py  test_fixtures.py  test_highs_solver.py  test_highs_solver_extended.py  test_iis_algorithm.py  test_incremental_updates.py  test_integration.py  test_model_change_tracking.py
utils/: exceptions.py
