[project]
name = "iis-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
]
test = [
    "pytest>=9.0.1",
]
